Updated to add an about me section
Included basic layout to see how the new sections would look.

--- a/index.htm
+++ b/index.htm
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 	<head>
-		<title>Homepage</title>
+		<title>Eric Ruiz's Portfolio</title>
 	</head>
 	<body>
-		<h1>Hello World!</h1>
-		<p>This is a Web page.</p>
-		<p>I hope this works.</p>
-		<p>Now this has got to work!</p>
+		<h1><u>Eric Ruiz's Portfolio</u></h1>
+		<h4>My name is Eric.</h4>
+		<p>Hello.  My name is Eric.  I am a recent graduate from California State University, San Bernardino, and I am
+			an aspiring game developer.  </p>
 	</body>
 </html>
