--- a/index.htm
+++ b/index.htm
@@ -3,8 +3,8 @@
 		<title>Eric Ruiz's Portfolio</title>
 	</head>
 	<body>
-		<h1><u>Eric Ruiz's Portfolio</u></h1>
-		<h4>My name is Eric.</h4>
+		<h1><b><u>Eric Ruiz's Portfolio</u></b></h1>
+		<h2><b>My name is Eric.</b></h2>
 		<p>Hello.  My name is Eric.  I am a recent graduate from California State University, San Bernardino, and I am
 			an aspiring game developer.  </p>
 	</body>
