added css file and img
added image of myself from file.

--- a/index.htm
+++ b/index.htm
@@ -5,6 +5,7 @@
 	<body>
 		<h1><b><u>Eric Ruiz's Portfolio</u></b></h1>
 		<h2><b>My name is Eric.</b></h2>
+		<img src="/eric2018.jpeg">
 		<p>Hello.  My name is Eric.  I am a recent graduate from California State University, San Bernardino, and I am
 			an aspiring game developer.  </p>
 	</body>
