--- a/index.htm
+++ b/index.htm
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 	<head>
 		<title>Eric Ruiz's Portfolio</title>
+		<meta charset="utf-8"/>
+		<link rel="stylesheet" href="homepage.css">
 	</head>
 	<body>
-		<h1><b><u>Eric Ruiz's Portfolio</u></b></h1>
+		<h1><b>Eric Ruiz's Portfolio</b></h1>
 		<h2><b>My name is Eric.</b></h2>
-		<img src="/eric2018.jpeg" width=300>
-		<p>Hello.  My name is Eric.  I am a recent graduate from California State University, San Bernardino, and I am
-			an aspiring game developer.  </p>
+		<img src="/eric2018.jpeg" width=300
+			alt="This is me in December 2017.">
+		<p id="biography" class="general_content">
+			Hello.  My name is Eric.  I am a recent graduate from California State University, San Bernardino, and I am
+			an aspiring game developer.  
+		</p>
 	</body>
 </html>
