--- a/index.htm
+++ b/index.htm
@@ -7,9 +7,9 @@
 	<body>
 		<h1><b>Eric Ruiz's Portfolio</b></h1>
 		<h2><b>My name is Eric.</b></h2>
-		<img src="/eric2018.jpeg" width=300
-			alt="This is me in December 2017.">
 		<p id="biography" class="general_content">
+			<img src="/eric2018.jpeg" width=300 alt="This is me in December 2017.">
+			<br>
 			Hello.  My name is Eric.  I am a recent graduate from California State University, San Bernardino, and I am
 			an aspiring game developer.  
 		</p>
