moved css file into a separate folder

--- a/index.htm
+++ b/index.htm
@@ -2,7 +2,7 @@
 	<head>
 		<title>Eric Ruiz's Portfolio</title>
 		<meta charset="utf-8"/>
-		<link rel="stylesheet" href="homepage.css">
+		<link rel="stylesheet" href="css/homepage.css">
 	</head>
 	<body>
 		<h1><b>Eric Ruiz's Portfolio</b></h1>
