--- a/index.htm
+++ b/index.htm
@@ -6,12 +6,18 @@
 	</head>
 	<body>
 		<h1><b>Eric Ruiz's Portfolio</b></h1>
-		<h2><b>My name is Eric.</b></h2>
-		<p id="biography" class="general_content">
-			<img src="img/eric2018.jpeg" width=300 alt="This is me in December 2017.">
-			<br><br>
-			Hello.  My name is Eric.  I am a recent graduate from California State University, San Bernardino, and I am
-			an aspiring game developer.  
-		</p>
+		<h2><b>About Me</b></h2>
+		<section id="about_me">
+			<div id="picture">
+				<img src="img/eric2018.jpeg" alt="This is me in December 2017.">
+			</div>
+			
+			<div id="biography" class="general_content">
+				<p>
+					Hello.  My name is Eric.  I am a recent graduate from California State University, San Bernardino, and I am
+					an aspiring game developer.  
+				</p>
+			</div>
+		</section>
 	</body>
 </html>
